@@ -20,6 +20,7 @@
  - Always run option 'true' by default;
  - Fixed run toggle for A*;
  - Avoid too far away enemy NPCs act at a distant fight;
+ - Fixed the save of NPCs position;
 
 Working on:
  - Weather effects;
